provisioning/kubeneters/test-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
spec:
  selector:
    app: app-frontend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30002
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend
  template:
    metadata:
      labels:
        app: app-frontend
    spec:
      containers:
        - name: app-frontend
          image: ghcr.io/remla24-team12/frontend:latest
          ports:
            - containerPort: 8080
