provisioning/kubeneters/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: app-frontend
            port:
              number: 8080
    - match:
        - uri:
            prefix: "/api"
      route:
        - destination:
            host: nginx-service
            port:
              number: 80
    - match:
        - uri:
            prefix: "/model"
      route:
        - destination:
            host: model-service
            port:
              number: 5000
